msm8916-common: Fixing a dac_override for perfd
Bug: 38182328
Bug: 34784662
Test: perfd no longer requests dac_override privileges
Change-Id: Idc6f2ff2c476327bb4a261b20413e688562ce049

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -421,7 +421,7 @@ on property:persist.usb.chgdisabled=0
 service perfd /vendor/bin/perfd
    class main
    user root
-   group root readproc
+   group root readproc system
    disabled
    writepid /dev/cpuset/system-background/tasks
 
