--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -91,6 +91,9 @@ on early-boot
 
     write /sys/kernel/boot_adsp/boot 1
 
+    # Bluetooth
+    chown bluetooth bluetooth /persist/.bt_nv.bin
+
 on boot
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
