--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -44,6 +44,9 @@ on fs
 
     restorecon_recursive /persist
 
+    setprop persist.adb.nonblocking_ffs 0
+    setprop ro.adb.nonblocking_ffs 0
+
 on post-fs-data
     # Create folder for mm-qcamera-daemon
     mkdir /data/fdAlbum 0770 camera camera
