--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -32,7 +32,6 @@ import init.target.rc
 
 on early-init
     mkdir /system 0777 root root
-    symlink /data/tombstones /tombstones
 
     mount debugfs debugfs /sys/kernel/debug
     chmod 0755 /sys/kernel/debug
@@ -94,10 +93,10 @@ on post-fs-data
     mkdir /data/nfc/param 0770 nfc nfc
 
     mkdir /data/tombstones 0771 system system
-    mkdir /tombstones/modem 0771 system system
-    mkdir /tombstones/lpass 0771 system system
-    mkdir /tombstones/wcnss 0771 system system
-    mkdir /tombstones/dsps 0771 system system
+    mkdir /data/tombstones/modem 0771 system system
+    mkdir /data/tombstones/lpass 0771 system system
+    mkdir /data/tombstones/wcnss 0771 system system
+    mkdir /data/tombstones/dsps 0771 system system
 
     mkdir /persist/data/sfs 0700 system system
     mkdir /persist/data/tz 0700 system system
